crates/proto-flow/tests/snapshots/regression__derive_request_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a150801 12117b22 73706563 223a2263| ......{"spec":"c 00000000
|6f6e6669 67227d12 db070801 12157b22| onfig"}.......{" 00000010
|76616c69 64617465 223a2263 6f6e6669| validate":"confi 00000020
|67227d1a 92030a11 61636d65 436f2f63| g"}.....acmeCo/c 00000030
|6f6c6c65 6374696f 6e1a082f 6b65792f| ollection../key/ 00000040
|6f6e651a 082f6b65 792f7477 6f220b2f| one../key/two"./ 00000050
|5f6d6574 612f7575 69642a04 74797065| _meta/uuid*.type 00000060
|2a067265 67696f6e 32710a09 2f6a736f| *.region2q../jso 00000070
|6e2f7074 72120761 2d666965 6c642001| n/ptr..a-field . 00000080
|32590a07 696e7465 6765720a 06737472| 2Y..integer..str 00000090
|696e671a 131a0374 79702204 64617465| ing....typ".date 000000a0
|30b9603a 03656e63 22057469 746c652a| 0.`:.enc".title* 000000b0
|04646573 63320e7b 22646566 223a2261| .desc2.{"def":"a 000000c0
|756c7422 7d40014a 12090000 00000000| ult"}@.J........ 000000d0
|45c01100 00000000 001c403a 0e7b2261| E.........@:.{"a 000000e0
|636b223a 22747275 65227d42 127b2277| ck":"true"}B.{"w 000000f0
|72697465 223a2273 6368656d 61227d4a| rite":"schema"}J 00000100
|a3010a12 70617274 6974696f 6e2f7465| ....partition/te 00000110
|6d706c61 74651003 1a400a1e 0a0f6573| mplate...@....es 00000120
|74756172 792e6465 762f666f 6f120b6c| tuary.dev/foo..l 00000130
|6162656c 2d76616c 75650a1e 0a0f6573| abel-value....es 00000140
|74756172 792e6465 762f6261 72120b6f| tuary.dev/bar..o 00000150
|74686572 2d76616c 75652242 08e9ec06| ther-value"B.... 00000160
|10031a12 73333a2f 2f627563 6b65742f| ....s3://bucket/ 00000170
|70726566 69782203 08ac0232 07083e10| prefix"....2..>. 00000180
|80e59a77 3a185061 74687b7b 506f7374| ...w:.Path{{Post 00000190
|6669782e 54656d70 6c617465 7d7d3004| fix.Template}}0. 000001a0
|38cfb0f5 015a117b 22726561 64223a22| 8....Z.{"read":" 000001b0
|73636865 6d61227d 22cf030a 0b737461| schema"}"....sta 000001c0
|626c655f 6e616d65 1292030a 1161636d| ble_name.....acm 000001d0
|65436f2f 636f6c6c 65637469 6f6e1a08| eCo/collection.. 000001e0
|2f6b6579 2f6f6e65 1a082f6b 65792f74| /key/one../key/t 000001f0
|776f220b 2f5f6d65 74612f75 7569642a| wo"./_meta/uuid* 00000200
|04747970 652a0672 6567696f 6e32710a| .type*.region2q. 00000210
|092f6a73 6f6e2f70 74721207 612d6669| ./json/ptr..a-fi 00000220
|656c6420 0132590a 07696e74 65676572| eld .2Y..integer 00000230
|0a067374 72696e67 1a131a03 74797022| ..string....typ" 00000240
|04646174 6530b960 3a03656e 63220574| .date0.`:.enc".t 00000250
|69746c65 2a046465 7363320e 7b226465| itle*.desc2.{"de 00000260
|66223a22 61756c74 227d4001 4a120900| f":"ault"}@.J... 00000270
|00000000 0045c011 00000000 00001c40| .....E.........@ 00000280
|3a0e7b22 61636b22 3a227472 7565227d| :.{"ack":"true"} 00000290
|42127b22 77726974 65223a22 73636865| B.{"write":"sche 000002a0
|6d61227d 4aa3010a 12706172 74697469| ma"}J....partiti 000002b0
|6f6e2f74 656d706c 61746510 031a400a| on/template...@. 000002c0
|1e0a0f65 73747561 72792e64 65762f66| ...estuary.dev/f 000002d0
|6f6f120b 6c616265 6c2d7661 6c75650a| oo..label-value. 000002e0
|1e0a0f65 73747561 72792e64 65762f62| ...estuary.dev/b 000002f0
|6172120b 6f746865 722d7661 6c756522| ar..other-value" 00000300
|4208e9ec 0610031a 1273333a 2f2f6275| B........s3://bu 00000310
|636b6574 2f707265 66697822 0308ac02| cket/prefix".... 00000320
|3207083e 1080e59a 773a1850 6174687b| 2..>....w:.Path{ 00000330
|7b506f73 74666978 2e54656d 706c6174| {Postfix.Templat 00000340
|657d7d30 0438cfb0 f5015a11 7b227265| e}}0.8....Z.{"re 00000350
|6164223a 22736368 656d6122 7d1a147b| ad":"schema"}..{ 00000360
|22736875 66666c65 223a2263 6f6e6669| "shuffle":"confi 00000370
|67227d22 137b226c 616d6264 61223a22| g"}".{"lambda":" 00000380
|636f6e66 6967227d 28022a02 01023214| config"}(.*...2. 00000390
|66696c65 3a2f2f2f 70726f6a 6563742f| file:///project/ 000003a0
|726f6f74 3a320a18 2f757369 6e672f74| root:2../using/t 000003b0
|79706573 63726970 742f6d6f 64756c65| ypescript/module 000003c0
|12166669 6c653a2f 2f2f7061 74682f74| ..file:///path/t 000003d0
|6f2f696d 706f7274 4a0b3030 3a31313a| o/importJ.00:11: 000003e0
|32323a33 331ad403 0a92030a 1161636d| 22:33........acm 000003f0
|65436f2f 636f6c6c 65637469 6f6e1a08| eCo/collection.. 00000400
|2f6b6579 2f6f6e65 1a082f6b 65792f74| /key/one../key/t 00000410
|776f220b 2f5f6d65 74612f75 7569642a| wo"./_meta/uuid* 00000420
|04747970 652a0672 6567696f 6e32710a| .type*.region2q. 00000430
|092f6a73 6f6e2f70 74721207 612d6669| ./json/ptr..a-fi 00000440
|656c6420 0132590a 07696e74 65676572| eld .2Y..integer 00000450
|0a067374 72696e67 1a131a03 74797022| ..string....typ" 00000460
|04646174 6530b960 3a03656e 63220574| .date0.`:.enc".t 00000470
|69746c65 2a046465 7363320e 7b226465| itle*.desc2.{"de 00000480
|66223a22 61756c74 227d4001 4a120900| f":"ault"}@.J... 00000490
|00000000 0045c011 00000000 00001c40| .....E.........@ 000004a0
|3a0e7b22 61636b22 3a227472 7565227d| :.{"ack":"true"} 000004b0
|42127b22 77726974 65223a22 73636865| B.{"write":"sche 000004c0
|6d61227d 4aa3010a 12706172 74697469| ma"}J....partiti 000004d0
|6f6e2f74 656d706c 61746510 031a400a| on/template...@. 000004e0
|1e0a0f65 73747561 72792e64 65762f66| ...estuary.dev/f 000004f0
|6f6f120b 6c616265 6c2d7661 6c75650a| oo..label-value. 00000500
|1e0a0f65 73747561 72792e64 65762f62| ...estuary.dev/b 00000510
|6172120b 6f746865 722d7661 6c756522| ar..other-value" 00000520
|4208e9ec 0610031a 1273333a 2f2f6275| B........s3://bu 00000530
|636b6574 2f707265 66697822 0308ac02| cket/prefix".... 00000540
|3207083e 1080e59a 773a1850 6174687b| 2..>....w:.Path{ 00000550
|7b506f73 74666978 2e54656d 706c6174| {Postfix.Templat 00000560
|657d7d30 0438cfb0 f5015a11 7b227265| e}}0.8....Z.{"re 00000570
|6164223a 22736368 656d6122 7d120b31| ad":"schema"}..1 00000580
|313a3232 3a33333a 34341a14 15332211| 1:22:33:44...3". 00000590
|001d7766 554425bb aa99882d ffeeddcc| ..wfUD%....-.... 000005a0
|2a1a7b22 636f6e6e 6563746f 72223a7b| *.{"connector":{ 000005b0
|22737461 7465223a 34327d7d 223e0802| "state":42}}">.. 000005c0
|121209d2 04000000 00000011 2e160000| ................ 000005d0
|00000000 1a160a09 5b747275 652c3332| ........[true,32 000005e0
|5d120456 4b1e0918 85c39f15 220e7b22| ]..VK.......".{" 000005f0
|72656164 223a2264 6f63227d 2a003266| read":"doc"}*.2f 00000600
|0a640a4a 0a15612f 72656164 2f6a6f75| .d.J..a/read/jou 00000610
|726e616c 3b737566 66697812 3108b960| rnal;suffix.1..` 00000620
|12150a05 03090805 07120c09 e3210000| .............!.. 00000630
|00000000 10d70812 150a0507 0c662b1d| .............f+. 00000640
|120c0935 01000000 00000010 ae111216| ...5............ 00000650
|0a0e616e 2f61636b 2f6a6f75 726e616c| ..an/ack/journal 00000660
|12040304 02053a00 a2060612 02486918| ......:......Hi. 00000670
|01|                                  .                00000680
                                                       00000681
