crates/proto-flow/tests/snapshots/regression__materialization_spec_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a166163 6d65436f 2f6d6174 65726961| ..acmeCo/materia 00000000
|6c697a61 74696f6e 10081a1d 7b226d61| lization....{"ma 00000010
|74657269 616c697a 65223a7b 22636f6e| terialize":{"con 00000020
|66696722 3a34327d 7d22aa05 0a157b22| fig":42}}"....{" 00000030
|7265736f 75726365 223a2263 6f6e6669| resource":"confi 00000040
|67227d12 04736f6d 65120470 6174681a| g"}..some..path. 00000050
|92030a11 61636d65 436f2f63 6f6c6c65| ....acmeCo/colle 00000060
|6374696f 6e1a082f 6b65792f 6f6e651a| ction../key/one. 00000070
|082f6b65 792f7477 6f220b2f 5f6d6574| ./key/two"./_met 00000080
|612f7575 69642a04 74797065 2a067265| a/uuid*.type*.re 00000090
|67696f6e 32710a09 2f6a736f 6e2f7074| gion2q../json/pt 000000a0
|72120761 2d666965 6c642001 32590a07| r..a-field .2Y.. 000000b0
|696e7465 6765720a 06737472 696e671a| integer..string. 000000c0
|131a0374 79702204 64617465 30b9603a| ...typ".date0.`: 000000d0
|03656e63 22057469 746c652a 04646573| .enc".title*.des 000000e0
|63320e7b 22646566 223a2261 756c7422| c2.{"def":"ault" 000000f0
|7d40014a 12090000 00000000 45c01100| }@.J........E... 00000100
|00000000 001c403a 0e7b2261 636b223a| ......@:.{"ack": 00000110
|22747275 65227d42 127b2277 72697465| "true"}B.{"write 00000120
|223a2273 6368656d 61227d4a a3010a12| ":"schema"}J.... 00000130
|70617274 6974696f 6e2f7465 6d706c61| partition/templa 00000140
|74651003 1a400a1e 0a0f6573 74756172| te...@....estuar 00000150
|792e6465 762f666f 6f120b6c 6162656c| y.dev/foo..label 00000160
|2d76616c 75650a1e 0a0f6573 74756172| -value....estuar 00000170
|792e6465 762f6261 72120b6f 74686572| y.dev/bar..other 00000180
|2d76616c 75652242 08e9ec06 10031a12| -value"B........ 00000190
|73333a2f 2f627563 6b65742f 70726566| s3://bucket/pref 000001a0
|69782203 08ac0232 07083e10 80e59a77| ix"....2..>....w 000001b0
|3a185061 74687b7b 506f7374 6669782e| :.Path{{Postfix. 000001c0
|54656d70 6c617465 7d7d3004 38cfb0f5| Template}}0.8... 000001d0
|015a117b 22726561 64223a22 73636865| .Z.{"read":"sche 000001e0
|6d61227d 22550a07 6b65792f 6f6e6512| ma"}"U..key/one. 000001f0
|0776616c 2f74776f 1a0d666c 6f775f64| .val/two..flow_d 00000200
|6f63756d 656e7422 1d0a0761 5f666965| ocument"...a_fie 00000210
|6c641212 7b226669 656c6422 3a22636f| ld..{"field":"co 00000220
|6e666967 227d2213 0a0b6f74 6865722f| nfig"}"...other/ 00000230
|6669656c 64120434 322e353a 420a400a| field..42.5:B.@. 00000240
|1e0a0f65 73747561 72792e64 65762f66| ...estuary.dev/f 00000250
|6f6f120b 6c616265 6c2d7661 6c75650a| oo..label-value. 00000260
|1e0a0f65 73747561 72792e64 65762f62| ...estuary.dev/b 00000270
|6172120b 6f746865 722d7661 6c756542| ar..other-valueB 00000280
|316d6174 65726961 6c697a65 2f61636d| 1materialize/acm 00000290
|65436f2f 6d617465 7269616c 697a6174| eCo/materializat 000002a0
|696f6e2f 736f6d65 25323070 6174682e| ion/some%20path. 000002b0
|76314803 520608cb c8d6a606 5a060880| v1H.R.......Z... 000002c0
|888ba106 60016a0e 736f6d65 25323070| ....`.j.some%20p 000002d0
|6174682e 76312a80 010a0e73 68617264| ath.v1*....shard 000002e0
|2f74656d 706c6174 651a0f72 65636f76| /template..recov 000002f0
|6572792f 70726566 6978220b 68696e74| ery/prefix".hint 00000300
|2f707265 66697828 03320208 3c480152| /prefix(.2..<H.R 00000310
|400a1e0a 0f657374 75617279 2e646576| @....estuary.dev 00000320
|2f666f6f 120b6c61 62656c2d 76616c75| /foo..label-valu 00000330
|650a1e0a 0f657374 75617279 2e646576| e....estuary.dev 00000340
|2f626172 120b6f74 6865722d 76616c75| /bar..other-valu 00000350
|65608cdc 0268e9ec 0632380a 11726563| e`...h...28..rec 00000360
|6f766572 792f7465 6d706c61 74651003| overy/template.. 00000370
|22210880 80401004 1a147333 3a2f2f62| "!...@....s3://b 00000380
|75636b65 742f7265 636f7665 72792203| ucket/recovery". 00000390
|08ac023a 0c08903f 12056874 74707318| ...:...?..https. 000003a0
|013a0308 a846|                       .:...F           000003b0
                                                       000003b6
